# rag_etl

./: .gitignore  README.md  pyproject.toml
src/rag_etl/: config.py
src/rag_etl/courses/: __init__.py  base_course.py
src/rag_etl/courses/com309/: __init__.py  com309_course.py  com309_metadata_transformer.py
src/rag_etl/extractors/: __init__.py  base_extractor.py
src/rag_etl/extractors/moodle/: __init__.py  moodle_extractor.py  moodle_parser.py
src/rag_etl/loaders/: __init__.py  base_loader.py  content_metadata_loader.py  dummy_loader.py
src/rag_etl/resources/: __init__.py  base_resource.py  mooc_resource.py  moodle_resource.py
src/rag_etl/transformers/: __init__.py  base_transformer.py
src/rag_etl/transformers/extract_zip/: __init__.py  extract_zip_transformer.py
src/rag_etl/transformers/jupyter_to_markdown/: __init__.py  jupyter_to_markdown_transformer.py  utils.py
src/rag_etl/transformers/pdf_to_markdown/: __init__.py  pdf_to_markdown_transformer.py  utils.py
src/rag_etl/transformers/split_exercises/: __init__.py  split_exercises_transformer.py  utils.py
src/rag_etl/utils/: __init__.py  cache.py  llms.py  mime_types.py
